Update popup.html to implement word search functionality with input and button

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -4,7 +4,10 @@
     <title>Search Extension</title>
   </head>
   <body>
-    <h1>Hello, Chrome Extension!</h1>
-    <script src="popup.js"></script>
+  <h1>Word Search</h1>
+  <label for="words">Enter words to search (one per line):</label><br>
+  <textarea id="words" rows="6" cols="30"></textarea><br>
+  <button id="searchBtn">Search</button>
+  <script src="popup.js"></script>
   </body>
 </html>
