--- a/extension/popup.html
+++ b/extension/popup.html
@@ -2,12 +2,18 @@
 <html>
   <head>
     <title>Search Extension</title>
+    <style>
+      body {
+        min-width: 260px;
+      }
+    </style>
   </head>
   <body>
   <h1>Word Search</h1>
   <label for="words">Enter words to search (one per line):</label><br>
-  <textarea id="words" rows="6" cols="30"></textarea><br>
+  <textarea id="words" rows="6" cols="32"></textarea><br>
   <button id="searchBtn">Search</button>
+  <label><input type="checkbox" id="autoApplyCheckbox"> Apply to all pages automatically</label><br>
   <script src="popup.js"></script>
   </body>
 </html>
