Add GitHub link to popup for easier access to source code

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -14,6 +14,11 @@
     <textarea id="words" rows="18" cols="32"></textarea><br>
   <button id="searchBtn">Search</button>
   <label><input type="checkbox" id="autoApplyCheckbox"> Apply to all pages automatically</label><br>
+  <div style="margin-top: 10px;">
+    <a href="https://github.com/abaines/search-extension" target="_blank" rel="noopener noreferrer">
+      View source on GitHub
+    </a>
+  </div>
   <script src="popup.js"></script>
   </body>
 </html>
