Update link text in popup for clarity and support information

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -16,7 +16,7 @@
   <label><input type="checkbox" id="autoApplyCheckbox"> Apply to all pages automatically</label><br>
   <div style="margin-top: 10px;">
     <a href="https://github.com/abaines/search-extension" target="_blank" rel="noopener noreferrer">
-      View source on GitHub
+      Source and Support on GitHub
     </a>
   </div>
   <script src="popup.js"></script>
