Add heart emoji to GitHub link for enhanced visual appeal

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
     <title>Search Extension</title>
     <style>
       body {
@@ -16,7 +17,7 @@
   <label><input type="checkbox" id="autoApplyCheckbox"> Apply to all pages automatically</label><br>
   <div style="margin-top: 10px;">
     <a href="https://github.com/abaines/search-extension" target="_blank" rel="noopener noreferrer">
-      Source and Support on GitHub
+      Source and Support on GitHub 🧡 
     </a>
   </div>
   <script src="popup.js"></script>
